# Simulation_analysis_offboard_sensor_fusion_Master_Thesis

./: .gitignore  README.md  frames_2025-05-09_13.17.42.gv  frames_2025-05-12_17.19.05.gv  frames_2025-05-22_10.08.23.gv  frames_2025-05-27_09.59.19.gv  frames_2025-05-29_16.45.46.gv  frames_2025-07-15_12.57.04.gv  frames_2025-07-16_15.55.48.gv  map.pgm  map.yaml
evaluation/: consolidated_metrics_with_noise.csv  consolidated_metrics_without_noise.csv  group_chart.py  octomap_radar_plot.py
evaluation/empty_room/: empty_world_A.csv  empty_world_B.csv  empty_world_C.csv  empty_world_s1.csv  empty_world_s2.csv
evaluation/empty_room/radar_plots/: consolidated_metrics_empty_room.csv
evaluation/office_pillars/: office_pillars_A.csv  office_pillars_B.csv  office_pillars_C.csv  office_pillars_s1.csv  office_pillars_s2.csv
evaluation/office_pillars/radar_plots/: consolidated_metrics_office_pillars.csv
evaluation/warehouse/: warehouse_A.csv  warehouse_B.csv  warehouse_C.csv  warehouse_S1.csv  warehouse_S2.csv
evaluation/with_noise/empty_room/: empty_world_A_noise.csv  empty_world_B_noise.csv  empty_world_C_noise.csv  empty_world_S1_noise.csv  empty_world_S2_noise.csv
evaluation/with_noise/empty_room/radar_plots/: consolidated_metrics_empty_room_noise.csv
evaluation/with_noise/office_pillars/: office_pillars_A_noise.csv  office_pillars_B_noise.csv  office_pillars_C_noise.csv  office_pillars_s1_noise.csv  office_pillars_s2_noise.csv
evaluation/with_noise/office_pillars/radar_plots/: consolidated_metrics_office_pillars_noise.csv
evaluation/with_noise/warehouse/: warehouse_A_noise.csv  warehouse_B_noise.csv  warehouse_C_noise.csv  warehouse_s1_noise.csv  warehouse_s2_noise.csv
evaluation/with_noise/warehouse/radar_plots/: consolidated_metrics_warehouse_noise.csv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/bboxes_ex_msgs/share/bboxes_ex_msgs/: package.sh
install/examples_tf2_py/lib/examples_tf2_py/: async_waits_for_transform  blocking_waits_for_transform  dynamic_broadcaster  frame_dumper  static_broadcaster  waits_for_transform
install/examples_tf2_py/share/examples_tf2_py/: package.sh
install/geometry2/share/geometry2/: package.sh
install/my_sensor_description/lib/my_sensor_description/: point_cloud_merger.py  point_cloud_merger_2.py
install/my_sensor_description/share/my_sensor_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml  package.zsh
install/my_sensor_description/share/my_sensor_description/cmake/: my_sensor_descriptionConfig-version.cmake  my_sensor_descriptionConfig.cmake
install/my_sensor_description/share/my_sensor_description/environment/: ament_prefix_path.dsv  path.dsv
install/my_sensor_description/share/my_sensor_description/launch/: sensor_Setup_ionic.launch.xml  sensor_setup.launch.xml  sensor_setup_rtab.launch.xml  sensor_setup_try.launch.xml
install/my_sensor_description/share/my_sensor_description/rviz/: sensor_config.rviz
install/my_sensor_description/share/my_sensor_description/scripts/: grid_map_fusion_node.py  point_cloud_merger_1.py
install/my_sensor_description/share/my_sensor_description/urdf/: lidar_camera_robot.urdf
install/my_sensor_description/share/my_sensor_description/worlds/: test_world.world  test_world_human.world
install/rtabmap_python/share/rtabmap_python/: package.dsv  package.ps1  package.sh
install/test_tf2/lib/test_tf2/: test_buffer_client
install/test_tf2/share/test_tf2/: package.sh
install/tf2/share/tf2/: local_setup.sh  package.sh
install/tf2_bullet/share/tf2_bullet/: local_setup.sh  package.sh
install/tf2_eigen/share/tf2_eigen/: package.sh
install/tf2_eigen_kdl/share/tf2_eigen_kdl/: local_setup.sh  package.sh
install/tf2_geometry_msgs/share/tf2_geometry_msgs/: package.sh
install/tf2_kdl/share/tf2_kdl/: package.sh
install/tf2_msgs/share/tf2_msgs/: package.sh
install/tf2_py/share/tf2_py/: local_setup.sh  package.sh
install/tf2_ros/lib/tf2_ros/: buffer_server  static_transform_publisher  tf2_echo
install/tf2_ros/share/tf2_ros/: package.sh
install/tf2_ros_py/share/tf2_ros_py/: package.sh
install/tf2_sensor_msgs/share/tf2_sensor_msgs/: package.sh
install/tf2_tools/lib/tf2_tools/: view_frames
log/: latest_build
src/: frames_2025-06-03_14.45.29.gv
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/my_sensor_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/my_sensor_description/config/: noise_injector_params.yaml  octomap_params.yaml
src/my_sensor_description/launch/: generate_ground_truth.launch.py  octomap_raycasting.launch.py  sensor_Setup_ionic.launch.xml  sensor_setup.launch.py  sensor_setup_rtab.launch.xml  sensor_setup_rtab_1.launch.xml  sensor_setup_try.launch.xml
src/my_sensor_description/maps/: empty_room.bt  empty_room.pcd  empty_world.bt  empty_world.pcd  office_pillars.bt  office_pillars.pcd  warehouse_new.bt  warehouse_new.pcd
src/my_sensor_description/nodes/: point_cloud_merger.py
src/my_sensor_description/resource/: my_sensor_description
src/my_sensor_description/scripts/: check_python_env.py  grid_map_fusion_node.py  octomap_raycasting_node.py  pcd_publisher_node.py  save_map_script.py  voxel_filter_node.py
src/my_sensor_description/src/: map_evaluator_node.cpp  map_evaluator_node_1.cpp  noise_injector_node.cpp  octomap_raycasting_node.cpp  octomap_raycasting_node_1.cpp
src/my_sensor_description/urdf/: ground_truth_scanner.urdf  lidar_camera_robot.urdf
src/my_sensor_description/worlds/: empty.world  empty_world.world  office_pillars.world  test_world_human.world  warehouse_new.world  warehouse_new_1.world
src/my_sensor_description/worlds/model/: MaleVisitorWalk.dae:Zone.Identifier
src/my_sensor_description/worlds/warehouse.world/: model.config  model.sdf
src/my_sensor_description_interfaces/: CMakeLists.txt  package.xml
src/my_sensor_description_interfaces/srv/: StartTimer.srv
(+48 files in other folders)
