<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_sensor_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="singh@todo.todo">singh</maintainer>
  <license>TODO: License declaration</license>

  <!--<buildtool_depend>ament_cmake</buildtool_depend>-->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <!--<build_type>ament_python</build_type>-->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_sensor_msgs</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>open3d</exec_depend>
  <depend>octomap</depend>
  <depend>octomap_msgs</depend>
  <build_depend>opencv4</build_depend>
  <exec_depend>opencv4</exec_depend>
  <depend>visualization_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>libpcl-all-dev</depend>
  <depend>rclcpp</depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>my_sensor_description_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
